@startuml

title __ITEM's Class Diagram__\n

  namespace Bomber {
    namespace Item {
      abstract class Bomber.Item.Item {
          # isCollected : boolean
          + Item()
          + collided()
          {abstract} + doThisWhenCollided()
      }
    }
  }
  

  namespace Bomber {
    namespace Item {
      class Bomber.Item.ItemAddBomb {
          + ItemAddBomb()
          + doThisWhenCollided()
      }
    }
  }
  

  namespace Bomber {
    namespace Item {
      class Bomber.Item.ItemBombRange {
          + ItemBombRange()
          + doThisWhenCollided()
      }
    }
  }
  

  namespace Bomber {
    namespace Item {
      class Bomber.Item.ItemPlayerHealth {
          + ItemPlayerHealth()
          + doThisWhenCollided()
      }
    }
  }
  

  namespace Bomber {
    namespace Item {
      class Bomber.Item.ItemPlayerSpeed {
          + ItemPlayerSpeed()
          + doThisWhenCollided()
      }
    }
  }
  

  Bomber.Item.Item -up-|> Bomber.StillObject.Tile
  Bomber.Item.ItemAddBomb -up-|> Bomber.Item.Item
  Bomber.Item.ItemBombRange -up-|> Bomber.Item.Item
  Bomber.Item.ItemPlayerHealth -up-|> Bomber.Item.Item
  Bomber.Item.ItemPlayerSpeed -up-|> Bomber.Item.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
